--- a/app/globals.css
+++ b/app/globals.css
@@ -271,10 +271,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 /* Interactive Elements */
 .primary-button {
-    @apply bg-gradient-to-br from-[#7a9bf5] to-[#5386e4] text-white font-semibold px-[clamp(1rem,3vw,1.5rem)] py-[clamp(0.6rem,2vw,0.75rem)] rounded-full transition-all duration-300 ease-in-out cursor-pointer border-0 text-[clamp(0.8rem,2vw,0.875rem)] shadow-md;
+    @apply bg-gradient-to-br from-[#7a9bf5] to-[#5386e4] text-white font-semibold px-[clamp(1rem,3vw,1.5rem)] py-[clamp(0.6rem,2vw,0.75rem)] rounded-full transition-all duration-300 ease-in-out cursor-pointer border-2 border-blue-100/20 text-[clamp(0.8rem,2vw,0.875rem)] shadow-md;
 }
 .primary-button:hover {
-    @apply bg-gradient-to-br from-[#6b8df2] to-[#4a7ce6] shadow-lg -translate-y-0.5;
+    @apply to-[#4a7ce6] border-white shadow-lg scale-102;
 }
 
 .secondary-button {
@@ -679,6 +679,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
     @apply filter brightness-75 blur-[0.05rem];
 }
 
+.project-card:hover .project-link {
+    @apply opacity-100;
+}
+
 .project-card-image {
     @apply w-full max-h-140 mb-4 mt-0 mx-0 p-0 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-b-[rgba(83,134,228,0.2)] rounded-tl-[clamp(0.75rem,2vw,1rem)] rounded-tr-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out object-cover object-center;
 }
@@ -697,6 +701,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 .project-card-bullet {
     @apply mb-1 transition-all duration-300 ease-in-out;
+}
+
+.project-link {
+    @apply opacity-0;
 }
 
 @media (max-width: 1120px) {
