--- a/app/globals.css
+++ b/app/globals.css
@@ -10,14 +10,14 @@
 }
 
 html {
-    @apply scroll-smooth overflow-x-hidden overflow-y-scroll transition-all duration-300;
+    @apply scroll-smooth overflow-x-clip overflow-y-scroll transition-all duration-300;
     font-family: var(--font-primary), system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
 
 body {
     @apply m-0 p-0;
     font-family: var(--font-primary), system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-    -ms-overflow-style: none; /* IE/Edge legacy */
+    -ms-overflow-style: clip; /* IE/Edge legacy */
     scrollbar-width: none; /* Firefox */
 }
 
@@ -84,7 +84,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .nav-bar-vertical{
-    @apply fixed gap-2 transform h-screen ml-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] pl-[4] pr-[clamp(0.5rem,4vw,1rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-start flex-col top-0 bottom-0 right-0 z-51;
+    @apply fixed gap-2 transform h-screen w-[45vw] ml-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] pl-[4] pr-[clamp(0.5rem,4vw,1rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-start flex-col top-0 bottom-0 right-0 z-51;
 }
 
 .nav-button-container{
@@ -234,7 +234,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .grid-3 {
-    @apply grid grid-cols-[repeat(auto-fit,minmax(min(100%,280px),1fr))] gap-[clamp(1rem,3vw,1.5rem)];
+    @apply grid grid-cols-[repeat(auto-fit,minmax(min(100%,200px),1fr))] gap-[clamp(1rem,3vw,1.5rem)];
 }
 
 /* Code and Media Classes */
@@ -251,7 +251,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .image-container {
-    @apply rounded-[clamp(0.75rem,2vw,1rem)] max-w-fit overflow-hidden border border-[rgba(83,134,228,0.2)] transition-all duration-300 ease-in-out backdrop-blur;
+    @apply rounded-[clamp(0.75rem,2vw,1rem)] max-w-fit overflow-clip border border-[rgba(83,134,228,0.2)] transition-all duration-300 ease-in-out backdrop-blur;
 }
 .image-container:hover {
     @apply border-[rgba(122,155,245,0.5)] shadow-lg;
@@ -271,7 +271,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 /* Interactive Elements */
 .primary-button {
-    @apply bg-gradient-to-br from-[#7a9bf5] to-[#5386e4] text-white font-semibold px-[clamp(1rem,3vw,1.5rem)] py-[clamp(0.6rem,2vw,0.75rem)] rounded-full transition-all duration-300 ease-in-out cursor-pointer border-2 border-blue-100/20 text-[clamp(0.8rem,2vw,0.875rem)] shadow-md;
+    @apply bg-gradient-to-br from-[#7a9bf5] to-[#5386e4] text-white font-semibold px-[clamp(.075rem,3vw,1.5rem)] py-[clamp(0.45rem,2vw,0.75rem)] rounded-full transition-all duration-300 ease-in-out cursor-pointer border-2 border-blue-100/20 text-[clamp(0.8rem,2vw,0.875rem)] shadow-md;
 }
 .primary-button:hover {
     @apply to-[#4a7ce6] border-white shadow-lg scale-102;
@@ -306,6 +306,14 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 /* Form Elements */
+
+.contact-form-section {
+    @apply flex flex-col justify-center h-[90vh] mb-10;
+}
+
+.contact-form-heading {
+    @apply text-[clamp(1.25rem,3rem,3rem)] font-bold mb-2;
+}
 .form-input {
     @apply bg-gradient-to-br from-[rgba(15,15,20,0.9)] via-[rgba(10,10,10,0.95)] to-[rgba(5,41,158,0.05)] border border-[rgba(83,134,228,0.2)] rounded-[clamp(0.75rem,2vw,1rem)] px-[clamp(0.75rem,2vw,1rem)] py-[clamp(0.6rem,2vw,0.75rem)] text-[#e8e8ea] transition-all duration-300 ease-in-out w-full text-[clamp(0.8rem,2vw,0.875rem)] backdrop-blur;
 }
@@ -344,7 +352,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .alert {
-    @apply border border-[rgba(83,134,228,0.2)] bg-gradient-to-br from-[rgba(15,15,20,0.9)] via-[rgba(10,10,10,0.95)] to-[rgba(5,41,158,0.08)] rounded-[clamp(0.75rem,2vw,1rem)] p-[clamp(0.75rem,2vw,1rem)] mb-[clamp(0.75rem,2vw,1rem)] backdrop-blur;
+    @apply border border-[rgba(228,83,83,0.2)] bg-gradient-to-br from-[rgba(15,15,20,0.9)] via-[rgba(10,10,10,0.95)] to-[rgba(5,41,158,0.08)] rounded-[clamp(0.75rem,2vw,1rem)] p-[clamp(0.75rem,2vw,1rem)] mb-[clamp(0.75rem,2vw,1rem)] backdrop-blur;
 }
 
 .alert-text {
@@ -450,7 +458,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .profile-image {
-  @apply overflow-hidden mt-auto mb-auto rounded-full object-scale-down border-2 ring-3 ring-blue-100/10 text-blue-400 transition-all duration-300 flex-shrink-0;
+  @apply overflow-clip mt-auto mb-auto rounded-full object-scale-down border-2 ring-3 ring-blue-100/10 text-blue-400 transition-all duration-300 flex-shrink-0;
 }
 
 .section-title-text {
@@ -565,7 +573,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .carousel-scroll-wrapper {
-    @apply overflow-hidden w-fit flex-nowrap;
+    @apply overflow-clip w-fit flex-nowrap;
     mask: linear-gradient(
         to right,
         transparent 0%,
@@ -583,12 +591,12 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .carousel-left-scrolling-wrapper {
-    @apply flex w-fit justify-between overflow-hidden;
+    @apply flex w-fit justify-between overflow-clip;
     animation: scrollSkills 30s infinite linear;
 }
 
 .carousel-right-scrolling-wrapper {
-    @apply flex w-fit justify-between overflow-hidden;
+    @apply flex w-fit justify-between overflow-clip;
     animation: scrollSkills 30s infinite linear reverse;
 }
 
@@ -611,10 +619,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .work-section {
-    @apply flex justify-center h-fit mb-10;
+    @apply flex h-fit mb-10;
 }
 .timeline-container {
-    @apply flex flex-col w-fit h-full mt-5 justify-between;
+    @apply flex flex-col w-full h-full mt-5 justify-between;
 }
 
 .position-timeline-container {
@@ -646,7 +654,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 @media (max-width: 1120px) {
     .position-card-bullet-list{
-        @apply h-auto -translate-y-full m-0 p-0 overflow-hidden;
+        @apply h-auto -translate-y-full m-0 p-0 overflow-clip;
     }
     .position-card-bullet {
         @apply opacity-0 h-0 p-0 m-0;
@@ -656,15 +664,15 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 /* Project Styles */
 
 .project-section {
-    @apply flex justify-center h-[clamp(80vh,90vh,fit)];
+    @apply flex justify-center h-[clamp(80vh,90vh,fit)] transform-3d;
 }
 
 .project-timeline-container {
-    @apply flex flex-row my-0 py-0 gap-0 h-fit w-fit;
+    @apply flex flex-row my-0 py-0 gap-0 h-fit w-fit transform-3d;
 }
 
 .project-timeline-container-r {
-    @apply flex flex-row-reverse my-0 py-0 h-full w-fit;
+    @apply flex flex-row-reverse my-0 py-0 h-full w-fit transform-3d;
 }
 
 .project-card {
@@ -680,11 +688,11 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .project-card:hover .project-link {
-    @apply opacity-100;
+    @apply opacity-100  pointer-events-auto;
 }
 
 .project-card-image {
-    @apply w-full max-h-140 mb-4 mt-0 mx-0 p-0 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-b-[rgba(83,134,228,0.2)] rounded-tl-[clamp(0.75rem,2vw,1rem)] rounded-tr-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out object-cover object-center;
+    @apply w-full max-h-140  mt-0 mx-0 p-0 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-b-[rgba(83,134,228,0.2)] rounded-tl-[clamp(0.75rem,2vw,1rem)] rounded-tr-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out object-cover object-center;
 }
 
 .project-card-title {
@@ -704,27 +712,93 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .project-link {
-    @apply opacity-0;
+    @apply opacity-0 pointer-events-none;
+}
+
+.project-link-container {
+    @apply flex flex-row justify-center gap-2 absolute top-[30%] left-[50%] -translate-x-[50%];
+}
+
+.summary-section {
+    @apply relative w-auto h-full font-normal;
+}
+
+.summary-section-para {
+    @apply text-[2.25vh] max-w-full mx-auto;
 }
 
 @media (max-width: 1120px) {
+    .summary-section-para {
+        @apply max-w-full mx-1;
+    }
+    .project-link-container {
+        @apply top-[18%];
+    }
     .project-card-bullet-list{
-        @apply h-auto -translate-y-full m-0 p-0 overflow-hidden;
+        @apply h-auto -translate-y-full m-0 p-0 overflow-clip;
     }
     .project-card-bullet {
         @apply opacity-0 h-0 p-0 m-0;
     }
 }
 
+.media-carousel-section {
+  @apply relative my-5 mx-auto w-[40vw] h-[60vh] bg-white rounded-2xl overflow-hidden border border-[rgba(83,134,228,0.2)] transition-all duration-300;
+}
 
+.media-carousel-section:hover {
+    @apply scale-[99%] drop-shadow-white;
+}
 
+.media-carousel-container {
+  @apply flex transition-transform duration-500 ease-in-out mx-auto w-full h-full border border-[rgba(83,134,228,0.2)];
+}
 
+.media-carousel-slide {
+  @apply flex-shrink-0 w-full h-full mx-auto;
+}
 
+.directional-button {
+  @apply absolute top-1/2 -translate-y-1/2 z-10 bg-black/50 text-white p-1 rounded-full hover:bg-black/70 transition-all duration-200 flex items-center justify-center;
+}
 
+.directional-button-left {
+  @apply left-4;
+}
 
+.directional-button-right {
+  @apply right-4;
+}
 
+.hobby-card {
+    @apply bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-[rgba(83,134,228,0.2)] rounded-[clamp(0.75rem,2vw,1rem)] flex gap-2 w-fit h-fit p-4 transition-all duration-300;
+}
 
+.hobby-card:hover {
+    @apply border-blue-400 shadow-lg scale-99 shadow-white/15;
+}
 
+.about-container {
+    @apply h-fit -mt-30;
+}
+
+@media (max-width: 1120px) {
+    .about-container {
+        @apply -mt-40;
+    }
+  .media-carousel-section{
+    @apply w-[clamp(1.8rem,36vh,180rem)] h-[clamp(.9rem,18vh,90rem)];
+  }
+  
+  .directional-button-left {
+  @apply left-0 scale-50 p-3 -translate-x-2;
+}
+
+.directional-button-right {
+  @apply right-0 scale-50 p-3 translate-x-2;
+}
+  
+}
 
 @keyframes scrollSkills {
   from {
@@ -745,6 +819,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
     transform: translateY(0%);
 }
 }
+
 .animate-fadeIn {
   animation: fadeIn 0.35s ease-out;
 }
