--- a/app/globals.css
+++ b/app/globals.css
@@ -108,7 +108,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .section-title {
-    @apply text-[clamp(1.5rem,5vw,2.25rem)] font-bold text-[#f5f5f5] mb-[clamp(1rem,3vw,1.5rem)] leading-snug;
+    @apply text-[clamp(1.5rem,5vw,2.25rem)] font-bold text-[#f5f5f5] mb-[clamp(1rem,3vw,1.5rem)] leading-snug wrap-break-word;
 }
 
 .-section-title-lg {
@@ -190,7 +190,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .content-wrapper-px {
-    @apply  max-w-[min(90vw,72rem)] px-[clamp(1rem,4vw,1.5rem)] mx-auto;
+    @apply  max-w-[min(65vw,72rem)] px-[clamp(1rem,4vw,1.5rem)] mx-auto;
 }
 
 .bio-section {
@@ -476,13 +476,13 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .section-title-text {
-    @apply text-[clamp(1.25rem,3rem,3rem)] font-bold whitespace-nowrap;
+    @apply text-[clamp(1.25rem,3rem,3rem)] font-bold;
 }
 
 
 @media (max-width: 1120px) {
     .section-title-text {
-        @apply text-[10vw];
+        @apply text-[9vw];
     }
     .profile {
         @apply w-full;
@@ -742,6 +742,26 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
     @apply flex flex-row justify-center gap-2 absolute top-[30%] left-[50%] -translate-x-[50%];
 }
 
+.project-buttons-container {
+    @apply w-[60vw] flex mx-auto justify-between;
+}
+
+.project-back-button {
+    @apply w-fit text-[2vh] ml-0 mr-auto;
+}
+
+.project-view-button {
+    @apply w-fit text-[2vh] mr-0 ml-auto;
+}
+
+.project-image {
+    @apply mx-auto h-fit w-[60vw] rounded-2xl;
+}
+
+.project-section {
+    @apply mt-10 flex flex-col gap-5;
+}
+
 .summary-section {
     @apply relative w-auto h-full font-normal;
 }
@@ -751,6 +771,19 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 @media (max-width: 1120px) {
+    
+    .project-buttons-container {
+        @apply w-[90vw];
+    }
+    
+    .project-image {
+        @apply w-[90vw];
+    }
+
+    .project-section {
+        @apply mt-0;
+    }
+
     .summary-section-para {
         @apply max-w-full mx-1;
     }
